welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:7: error: not found: value nbBiscuit
if (nbBiscuit<3){
    ^Poucet:10: error: not found: value nbBiscuit
if (nbBiscuit>=3){
    ^